# Transnet

./: .clang-format  .flake8  .gitignore  AGENTS.md  ARCH.md  CHANGES.md  README.md  TODO.md  app.py  cedict.csv  runme.py  runme_test.py  tran_gemma.sh  tran_qwen3.5.sh
.github/: copilot-instructions.md
backend/: config.py  logger_setup.py  utils.py  utils_test.py
backend/api/: basic_trans.py
database/raw_data/: u8_csv.py
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  api.md  api_cn.md  architecture.md  database.md  database_cn.md  deployment.md  deployment_cn.md  types.md
island-transnet/: .env.example  .gitignore  Cargo.toml  README.md  TODO.md
island-transnet/bins/transnet-server/: Cargo.toml
island-transnet/bins/transnet-server/src/: main.rs
island-transnet/config/: transnet.toml  transnet_api.toml  transnet_db.toml  transnet_llm.toml
island-transnet/crates/transnet-api/: Cargo.toml
island-transnet/crates/transnet-api/src/: lib.rs
island-transnet/crates/transnet-llm/: Cargo.toml
island-transnet/crates/transnet-llm/src/: lib.rs  prompt.rs
island-transnet/crates/transnet-types/: Cargo.toml
island-transnet/crates/transnet-types/src/: lib.rs
island-transnet/docs/: README.md  api.md  architecture.md  database.md  development.md  integration.md  ipc.md  project_structure.md
island-transnet/src/: api.rs  format.rs  lib.rs  llm.rs  main.rs  prompt.rs  types.rs
static/: README.md  README_FRONTEND.md  fix-imports.js  index.html  index_temp.html  package-lock.json  package.json  tsconfig.json
static/css/: components.css  style.css
static/js/: api_client.js  main.js  main_temp.js
static/src/: app.ts  router.ts
static/src/api/: snapshoot.go
static/src/api/ecs/: EntityDelta.go  Snapshot.go
static/src/components/: Header.ts  ParticleBackground.ts  Toast.ts  Translator.ts  background.ts  camera.ts  house.ts  main_web.ts  metaland.ts  transnet.ts
static/src/components/zones/: house.ts
static/src/flatbuffers/: ecs_generated.d.ts.map  ecs_generated.ts
static/src/flatbuffers/ecs/: entity-delta.d.ts  entity-delta.ts  snapshot.d.ts.map  snapshot.js  snapshot.ts
static/src/flatbuffers/flatbuffers/: ecs.fbs  ecs_generated.d.ts  ecs_generated.js  ecs_generated.js.map
static/src/flatbuffers/flatbuffers/ecs/: entity-delta.d.ts.map  entity-delta.js  entity-delta.js.map  snapshot.d.ts  snapshot.js.map
static/src/main/: about.ts  auth.ts  home-sphere.ts  home.ts  login.ts  register.ts  setting.ts
static/src/metaland/: background.ts  ecs.ts  house.ts  metaland.ts  renderer.ts  types.ts
static/src/pages/: AuthPage.ts  FavoritesPage.ts  HistoryPage.ts  HomePage.ts  ProfilePage.ts  auth.ts  favorites.ts  history.ts  home.ts  profile.ts
static/src/services/: ApiService.ts  AuthService.ts  api.ts  auth.ts  language.ts
static/src/services/tran_api/: api.ts
static/src/shared/: auth.ts  footer.ts  header.ts  language.ts  page-shell.ts  particle-background.ts  toast.ts  transnet-nav.ts
static/src/styles/: animations.scss  static.scss  transnet.scss
static/src/styles/base/: _core.scss
static/src/styles/main/: _routes.scss
static/src/styles/metaland/: _routes.scss
static/src/styles/shared/: _shared.scss
static/src/styles/transnet/: _routes.scss
static/src/transnet/: api.ts  favorites.ts  history.ts  profile.ts  transnet.ts
transnet-server/: .env.example  Cargo.toml  README.md
transnet-server/src/: backend_client.rs  lib.rs  main.rs
