[package]
name = "transnet"
version = "0.1.0"
edition = "2021"
authors = ["Island Team"]
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0.6"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[[bin]]
name = "transnet-server"
path = "src/main.rs"
