[package]
name = "transnet-server"
version = "0.1.0"
edition = "2021"
authors = ["Island Team"]
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
chrono = "0.4"
dotenvy = "0.15.7"
transnet = { path = "../island-transnet" }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0.6"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
thiserror = "1.0"

