[package]
name = "transnet-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy = "0.15.7"
serde.workspace = true
tokio.workspace = true
toml = "1.0.6"
tracing.workspace = true
tracing-subscriber.workspace = true
transnet-api.workspace = true
transnet-llm.workspace = true
transnet-types.workspace = true
