[package]
name = "transnet-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
transnet-types.workspace = true
